--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [project]
 name = "osscs"
-version = "0.0.1"
+version = "0.1.3"
 authors = [
-  { name="ImCocos", email="nomail@gmail.com" },
+  { name="ImCocos", email="codimcocos@gmail.com" },
 ]
 description = "Open-source crypto-secure communication system"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-  'cryptography>=42.0.5'
+  'cryptography>=42.0.3'
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 
