--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "osscs"
-version = "0.1.5"
+version = "0.0.2"
 authors = [
   { name="ImCocos", email="codimcocos@gmail.com" },
 ]
@@ -12,7 +12,8 @@ dependencies = [
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent"
 ]
 
 [project.urls]
