--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ description = "Open-source crypto-secure communication system"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-  'cryptography>=42.0.3'
+  'cryptography>=42.0.3',
+  'pydantic>=2.6.4'
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
